<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.tabbedFragments.settings.SettingsFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.example.bms_ccu.viewModels.LocationSettingsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/country_select_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0"
                    android:text="@string/select_country"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/country_hint"
                    android:inputType="text"
                    android:textSize="24sp"
                    android:text="@={viewmodel.countryName}"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="0">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/countryList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </ScrollView>

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/dark_cloud" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/state_select_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/select_state"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:ems="10"
                    android:hint="@string/state_hint"
                    android:inputType="text"
                    android:textSize="24sp"
                    android:text="@={viewmodel.stateName}"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/stateList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </ScrollView>
            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/dark_cloud" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/city_select_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/select_city"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:ems="10"
                    android:hint="@string/city_hint"
                    android:inputType="text"
                    android:textSize="24sp"
                    android:text="@={viewmodel.cityName}"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cityList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </ScrollView>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</layout>
